--- a/css/style.css
+++ b/css/style.css
@@ -122,10 +122,8 @@ img{
  }
 
   /* Requirement 15 code here -- Do not remove this comment. */
-
-  img{
-    max-height: 95%;
-    max-width: 95%
+.about-image, .clients-image, .method-image, .contact-image{
+    overflow: hidden;
   }
 }
 
